<resources>
    <string name="app_name">FWWB</string>
    <string name="application_name">FWWB</string>
    <string name="labelusername">Username</string>
    <string name="English">English</string>
    <string name="Kannada">Kannada</string>
    <string name="SelectLanguage">Select Language</string>
    <string name="details">Enter login details</string>
    <string name="language">Select Language</string>
    <string name="passHint">Enter Password</string>
    <string name="password_hint">Enter Password</string>
    <string name="user_hint">Enter User Name</string>
    <string name="labelpassword">Password</string>
    <string name="CLEAR">Clear login</string>
    <string name="main_url">http://fwwbdev.mahiti.org/</string>
    <string name="answer_upload_url">http://fwwbdev.mahiti.org/api/add-survey-answers/</string>
    <string name="main_Url">http://fwwbdev.mahiti.org/</string>
    <string name="main_url_Beneficiary">http://fwwbdev.mahiti.org/</string>
    <string name="regionalLanguageURLS">http://fwwbdev.mahiti.org/api/language-list/</string>
    <string name="loadmore_facility">Loading more Facility please wait&#8230;</string>
    <string name="loadmore_beneficiary">Loading more Beneficiary please wait&#8230;</string>
    <string name="mahitiURL">http://www.mahiti.org/</string>
    <string name="captureTabInfoUrl">"capture-tab-info/"</string>
    <string name="schemas_url">http://akrspistaging.mahiti.org/api/schemecriterias/</string>
    <string name="checkNet">Please check internet connection</string>
    <string name="surveyListProgress">Loading survey data</string>
    <string name="levelsProgress">Loading master data</string>
    <string name="progressMaster">Please wait loading master data</string>
    <string name="loadingUpdateTableData">Loading updated tables data</string>
    <string name="of">of</string>
    <string name="enableGps">Gps is not enabled</string>
    <string name="gpsAlert">Please enable the gps</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading</string>
    <string name="exitSurvey">Are you sure,you wanted to exit from response collection ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleteSurvey">This form will not be saved</string>
    <string name="proceed">Proceed</string>
    <string name="pressToExit">Press once again to exit!</string>
    <string name="mandatoryQuestion">Mandatory field</string>
    <string name="updateSuccess">Updated successfully</string>
    <string name="somethingWentWrong">Something went wrong</string>
    <string name="agpsSelected">"Agps selected"</string>
    <string name="gpsSelected">"Gps selected"</string>
    <string name="agps">"Agps"</string>
    <string name="syncingPendingData">Syncing pending data</string>
    <string name="noPendingRecordsToSync">There is no pending records to sync</string>
    <string name="nameHint">User name</string>
    <string name="passwordHint">Password</string>
    <string name="validationMsg">Invalid username and password</string>
    <string name="login">Login</string>
    <string name="loginUrlKey">urlLogin</string>
    <string name="appLogin">app-login/</string>
    <string name="que_title">20dp</string>
    <string name="videoText">Edit images,videos *</string>
    <string name="SURVEY_STATUS">Survey completed successfully</string>
    <string name="tittle_small">10sp</string>
    <string name="question_small">9sp</string>
    <string name="answer_small">8sp</string>
    <string name="tittle_medium">15sp</string>
    <string name="question_medium">12sp</string>
    <string name="answer_medium">10sp</string>
    <string name="tittle_large">20sp</string>
    <string name="question_large">15sp</string>
    <string name="answer_large">12sp</string>
    <string name="SETTING">Select Font Size</string>
    <string name="SUBMIT">Submit</string>
    <string name="NEXT">Next</string>
    <string name="file_upload">File Upload</string>
    <string name="question">Question</string>
    <string name="file_saved">File Saved</string>
    <string name="pick_date">Pick Date</string>
    <string name="LOGOUT">Logout</string>
    <string name="header">heading</string>
    <string name="sync">Sync</string>
    <string name="star"><b><font fgcolor="red">*</font></b></string>
    <string name="created">Created</string>
    <string name="logout">Logout</string>
    <string name="completed">Completed</string>
    <string name="total">Total</string>
    <string name="pending">Pending</string>
    <string name="synchronised">Synchronised</string>
    <string name="syncData">Sync data</string>
    <string name="testServer">Test server connection</string>
    <string name="locationModes">Location selection mode</string>
    <string name="buildMahiti">Built by Mahiti</string>
    <string name="continueButton">Continue</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="completeSurvey">Survey completed</string>
    <string name="noRecords">No records to display</string>
    <string name="select">Select</string>
    <string name="chooseFont">select font size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="changeTheme">Change theme</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="updatedatabase">Update Database</string>
    <string name="create_new">Create new +</string>
    <string name="enter_name">Name</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="enter_age">Age</string>
    <string name="enter_contact_number">Contact number</string>
    <string name="enter_pincode">Pincode</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="taluk">Taluk</string>
    <string name="gramapanchayath">Gramapanchayath</string>
    <string name="village">Village</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="institution">Institution</string>
    <string name="survey_form">Survey Form</string>
    <string name="data_collection_form">Pending Activity</string>
    <string name="issues_management">Issues Management</string>
    <string name="meeting">Meetings</string>
    <string name="addinstitution">Add Institution</string>
    <string name="modules">Modules</string>
    <string name="back">Back</string>
    <string name="meetingheldon">Meeting held on </string>
    <string name="meetingheldby">Meeting held by </string>
    <string name="close">Close</string>
    <string name="agenda">Agenda</string>
    <string name="agendaofmeeting">Enter agenda of the meeting...</string>
    <string name="createnew">New +</string>
    <string name="moduleslist">Meetings</string>
    <string name="anyissues">Any Issues</string>
    <string name="meetingmodules">Meeting Module</string>
    <string name="locationlevel">Location level</string>
    <string name="levelofprocessing">Level of process</string>
    <string name="venue">Venue</string>
    <string name="participatingGroup">Participating group</string>
    <string name="participatingSubGroup">Participation Sub Groups</string>
    <string name="sdmcmembers">SDMC Members</string>
    <string name="teacher">Teachers</string>
    <string name="children">Children</string>
    <string name="issues">Issues</string>
    <string name="mandatory_star"><font color='#ff4500'>*</font></string>
    <string name="opened_issue">OPENED</string>
    <string name="closed_issue">CLOSED</string>
    <string name="status">Status</string>
    <string name="remarks">Remarks</string>
    <string name="created_on">Created On - </string>
    <string name="cost">Cost :</string>
    <string name="location_level">Location level</string>
    <string name="issue_type">Issue type</string>
    <string-array name="issues_tab_names">

        <item>"Opened"</item>
        <item>"Closed"</item>
        
    </string-array>
    <string name="child_enrollment_attendance"><![CDATA[Child Enrollment & Attendance]]></string>
    <string name="category">Category</string>
    <string name="sub_category">Sub category</string>
    <string name="requirement">Requirement</string>
    <string name="responsible_person">Responsible person</string>
    <string name="is_financial_issue">Is Financial issue ?</string>
    <string name="total_cost">Total cost</string>
    <string name="select_date">Select date</string>
    <string name="add_issue">Add Issue +</string>
    <string name="save">Save</string>
    <string name="designation">Designation</string>
    <string name="date_of_completion">Date of completion</string>
    <string name="enter_money">Enter money</string>
    <string name="enter_person_name">Enter name</string>
    <string name="add_issues">Add Issue</string>
    <string name="Participatingmembers">Participating members</string>
    <string name="saveandsubmit"><![CDATA[Save & submit]]></string>
    <string name="saveandissue"><![CDATA[Save & Add issue]]></string>
    <string name="saveandcreate"><![CDATA[save & Create New]]></string>
    <string name="contact_person">Contact person</string>
    <string name="contact_number">Contact person mobile number</string>
    <string name="next_meeting_date">Date of followup meeting</string>
    <string name="dateofmeeting">Date of meeting</string>
    <string name="type_to_search">Type to search</string>
    <string name="selectsublocation">Select sub location</string>
    <string name="selectbeneficiary">Select beneficiary</string>
    <string name="contact_person_name">Contact person name</string>
    <string name="contact_person_number">Contact person number</string>
    <string name="Institution_Type">Institute Type</string>
    <string name="facingissue">Facing Issue</string>
    <string name="OFFLINE">Offline records</string>
    <string name="choose_language">Choose Language</string>
    <string name="Hindi">Hindi</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="viewIssues">"View Issues"</string>
    <string name="addIssues">"Add Issues"</string>
    <string name="select_school_type">Select schooltype</string>
    <string name="enter_venue">Enter venue</string>
    <string name="enter_contact_person_name">Enter contact person name</string>
    <string name="enter_contact_person_number">Enter contact person number</string>
    <string name="enter_meeting_date">Enter meeting date</string>
    <string name="Issues">Issues</string>
    <string name="mother_enter_name">Mother name</string>
    <string name="father_enter_name">Father name</string>
    <string name="gender">Gender</string>
    <string name="caste">Caste</string>
    <string name="classs">Class</string>
    <string name="Intervention">Intervention</string>
    <string name="Date_of_identification">Date of identification</string>
    <string name="child_disablity">child disablity</string>
    <string name="Impairment">Impairment</string>
    <string name="selectBeneficiary">Select Beneficiary</string>
    <string name="facilitiesName">Facility</string>
    <string name="beneficiary_title">Beneficiary details</string>
    <string name="facility_title">Facility details</string>
    <string name="service_title">Service details</string>
    <string name="household">Household</string>
    <string name="mother_title">Mother</string>
    <string name="child_title">Child</string>
    <string name="partner">Partner</string>
    <string name="house_hold">Household</string>
    <string name="mother">Mother</string>
    <string name="mother_name">Mother name</string>
    <string name="trainigTab1">Current</string>
    <string name="trainig_text_2">Upcoming</string>
    <string name="trainig_text_3">Recent</string>
</resources>