<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cream"
    tools:context=".SurveyQuestionActivity">
    <include
        android:id="@+id/toolbar1"
        layout="@layout/toolbar"></include>
    <TextView
        android:id="@+id/textheading"
        android:layout_below="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:padding="4dp"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:fontFamily="fonts/Roboto-Regular.ttf"
        android:textStyle="bold"
        android:text="@string/child_enrollment_attendance"/>

    <ScrollView
        android:layout_below="@+id/textheading"
        android:layout_above="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/issuescroll">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/locationLevelLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/levelofprocessing"
                    android:textSize="15dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/edit_text_white_bg"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center">
                    <Spinner
                        android:id="@+id/levelspinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="1dp"
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/venueLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/levelofprocessing"
                    android:textSize="15dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/edit_text_white_bg"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"

                    android:gravity="center">
                    <TextView
                        android:id="@+id/venuespinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="3dp"

                       android:text="sfsffs"
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/categoryLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/category"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/edit_text_white_bg"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center">
                    <Spinner
                        android:id="@+id/category_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="3dp"
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/subcategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/subCategoryLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/sub_category"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/edit_text_white_bg"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center">
                    <Spinner
                        android:id="@+id/sub_category_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="3dp"
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/requirementLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/requirement"/>

                <EditText
                    android:id="@+id/requirementEdittext"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginTop="8dp"
                    android:singleLine="false"
                    android:paddingLeft="4dp"
                    android:textSize="@dimen/question_textsize"
                    android:paddingBottom="30dp"
                    android:hint="..."
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:background="@drawable/edit_text_white_bg"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/personLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/responsible_person"/>

                <EditText
                    android:id="@+id/person_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:focusable="true"
                    android:hint="@string/enter_person_name"
                    android:paddingLeft="5dp"
                    android:textSize="@dimen/question_textsize"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:background="@drawable/edit_text_white_bg"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/designationLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/designation"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/edit_text_white_bg"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center">
                    <Spinner
                        android:id="@+id/designation_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="3dp"
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/is_financial_issue"/>
                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_yes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="Yes"/>
                    <RadioButton
                        android:id="@+id/radio_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="No"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/statuslinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/status"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/edit_text_white_bg"
                    android:layout_height="40dp"
                    android:gravity="center">
                    <Spinner
                        android:id="@+id/status_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/issuelinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/issueTypeLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/issue_type"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/edit_text_white_bg"
                    android:layout_height="40dp"
                    android:gravity="center">
                    <Spinner
                        android:id="@+id/issue_type_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="3dp"
                        android:theme="@style/ThemeOverlay.AppCompat.Light"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_totalcost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/totalTextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_cost"/>

                <EditText
                    android:id="@+id/total_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:focusable="true"
                    android:hint="@string/enter_money"
                    android:inputType="number"
                    android:maxLength="7"
                    android:textSize="@dimen/question_textsize"
                    android:paddingLeft="5dp"
                    android:textColor="@color/black"
                    android:background="@drawable/edit_text_white_bg"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_marginBottom="30dp">
                <TextView
                    android:id="@+id/dateOfCOmpleteionLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_completion"/>

                <TextView
                    android:id="@+id/date_of_completion"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:focusable="true"
                    android:hint="@string/select_date"
                    android:padding="10dp"
                    android:drawableRight="@drawable/dateicon"
                    android:textColor="@color/black"
                    android:background="@drawable/edit_text_white_bg"/>
            </LinearLayout>

            <TextView
                android:id="@+id/addIssue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/Red"
                android:padding="8dp"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/white"
                android:text="@string/add_issue"/>
        </LinearLayout>
    </ScrollView>
        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:weightSum="3"
            android:layout_alignParentBottom="true"
            >
            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:textColor="#fff"/>
            <Button
                android:id="@+id/addissue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveandissue"
                android:layout_weight="1"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_weight="1"
                android:textColor="#fff"/>
        </LinearLayout>
</RelativeLayout>
